--- a/Code/Best Chat.GUI/MainWnd.xaml
+++ b/Code/Best Chat.GUI/MainWnd.xaml
@@ -101,17 +101,16 @@
 							<HierarchicalDataTemplate
 								DataType="TreeData:VisualTreeData"
 								ItemsSource="{Binding Children}">
-								<TreeViewItem
+								<StackPanel
+									Orientation="Horizontal"
 									ToolTip="{Binding LocalizedLongDesc}">
-									<TreeViewItem.Header>
-										<StackPanel
-											Orientation="Horizontal">
-											<Emoji:TextBlock Text="{Binding Icon}" />
-											<Label
-												Content="{Binding LocalizedName}" />
-										</StackPanel>
-									</TreeViewItem.Header>
-								</TreeViewItem>
+									<Emoji:TextBlock
+										Text="{Binding Icon}"
+										VerticalAlignment="Center" />
+									<Label
+										Content="{Binding LocalizedName}"
+										VerticalAlignment="Center" />
+								</StackPanel>
 							</HierarchicalDataTemplate>
 						</TreeView.ItemTemplate>
 					</TreeView>
