--- a/Code/IRC/Global/View/ConversationViewCtrl.xaml
+++ b/Code/IRC/Global/View/ConversationViewCtrl.xaml
@@ -5,13 +5,13 @@
 	xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
 	xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
 	xmlns:local="clr-namespace:BestChat.IRC.Global.View"
-	xmlns:Base="clr-namespace:BestChat.GUI.Ctrls;assembly=BestChat.Ctrls"
+	xmlns:Base="clr-namespace:BestChat.GUI.Ctrls;assembly=BestChat.GUI.Ctrls"
 	xmlns:OurDataCtxt="BestChat.Platform.Conversations;Assembly=BestChat.Platform.Conversations"
 	xmlns:DataDefs="clr-namespace:BestChat.IRC.Data.Defs;assembly=BestChat.IRC.Data"
 	xmlns:CalcBinding="clr-namespace:CalcBinding;assembly=CalcBinding"
 	xmlns:Emoji="clr-namespace:Emoji.Wpf;assembly=Emoji.Wpf"
 	xmlns:Ctrls="clr-namespace:BestChat.IRC.Global.View.Ctrls;assembly=BestChat.IRC.Global.View.Ctrls"
-	xmlns:GuiCtrls="clr-namespace:BestChat.GUI.Ctrls;assembly=BestChat.Ctrls"
+	xmlns:GuiCtrls="clr-namespace:BestChat.GUI.Ctrls;assembly=BestChat.GUI.Ctrls"
 	xmlns:data="clr-namespace:BestChat.IRC.Data;assembly=BestChat.IRC.Data"
 	d:DataContext="{d:DesignInstance Type=data:AbstractConversation}"
 	mc:Ignorable="d">
