Mainly touched namespaces and a missing typeof, it was almost ready I have no idea how PluginsExtScriptsHowToRunThem.InitializeComponent could work `<Hyperlink x:Name` will need be to solved in a different way, BestChatCtrls:FixedWidthHilightSpan probably too need to 'touch' all the xaml where .g.cs file is not generated :/

--- a/Code/BestChat.Prefs.GUI.Pages/Global/AppearancePage.xaml
+++ b/Code/BestChat.Prefs.GUI.Pages/Global/AppearancePage.xaml
@@ -5,7 +5,7 @@
 	xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
 	xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
 	xmlns:local="clr-namespace:BestChat.Prefs.GUI.Pages.Global"
-	xmlns:base="BestChat.Platform.Prefs.Ctrls;assembly=BestChat.Platform.Prefs.Ctrls"
+	xmlns:base="clr-namespace:BestChat.Platform.Prefs.Ctrls;assembly=BestChat.Platform.Prefs.Ctrls"
 	xmlns:BestChatCtrls="clr-namespace:BestChat.GUI.Ctrls;assembly=BestChat.GUI.Ctrls"
 	xmlns:BestChatPrefsCtrls="clr-namespace:BestChat.Prefs.GUI.Ctrls;assembly=BestChat.Prefs.GUI.Ctrls"
 	mc:Ignorable="d">
