--- a/Code/BestChat.Prefs.GUI.Pages/Global/PluginsExtWhereToLookPage.xaml
+++ b/Code/BestChat.Prefs.GUI.Pages/Global/PluginsExtWhereToLookPage.xaml
@@ -1,16 +1,16 @@
-﻿<base:VisualPrefsTabCtrl
+﻿<PrefsCtrls:VisualPrefsTabCtrl
 	x:Class="BestChat.Prefs.GUI.Pages.Global.PluginsExtWhereToLookPage"
 	xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
 	xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
 	xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
 	xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
 	xmlns:local="clr-namespace:BestChat.Prefs.GUI.Pages.Global"
-	xmlns:base="clr-namespace:BestChat.Platform.Prefs.Ctrls;assembly=BestChat.Platform.Prefs.Ctrls"
+	xmlns:PrefsCtrls="clr-namespace:BestChat.Platform.Prefs.Ctrls;assembly=BestChat.Platform.Prefs.Ctrls"
 	xmlns:BestChatCtrls="clr-namespace:BestChat.GUI.Ctrls;assembly=BestChat.GUI.Ctrls"
 	xmlns:PrefCtrls="clr-namespace:BestChat.Platform.Prefs.Ctrls;assembly=BestChat.Platform.Prefs.Ctrls"
 	mc:Ignorable="d">
 	<Grid>
-		<Grid.ColumnDefinitions>
+</PrefsCtrls:VisualPrefsTabCtrl>
 			<ColumnDefinition />
 			<ColumnDefinition
 				Width="4" />
