--- a/Code/BestChat.Prefs.GUI.Pages/Global/PluginsExtWhereToLookPage.xaml
+++ b/Code/BestChat.Prefs.GUI.Pages/Global/PluginsExtWhereToLookPage.xaml
@@ -9,95 +9,88 @@
 	xmlns:BestChatCtrls="clr-namespace:BestChat.GUI.Ctrls;assembly=BestChat.GUI.Ctrls"
 	xmlns:PrefCtrls="clr-namespace:BestChat.Platform.Prefs.Ctrls;assembly=BestChat.Platform.Prefs.Ctrls"
 	mc:Ignorable="d">
-	<Grid>
-</PrefsCtrls:VisualPrefsTabCtrl>
-			<ColumnDefinition />
-			<ColumnDefinition
-				Width="4" />
-			<ColumnDefinition
-				Width="Auto" />
-		</Grid.ColumnDefinitions>
-		<Grid.RowDefinitions>
-			<RowDefinition
+    <Grid>
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="4" />
+            <ColumnDefinition Width="Auto" />
+        </Grid.ColumnDefinitions>
+        <Grid.RowDefinitions>
+            <RowDefinition Height="Auto" />
+            <RowDefinition Height="4" />
+            <RowDefinition />
+            <RowDefinition Height="4" />
+            <RowDefinition Height="Auto" />
+        </Grid.RowDefinitions>
+        <PrefCtrls:InfoOnThisPageTextBlock
+		Text="Below are a series of paths you want Best Chat to consider as containing external plug-ins.  Chat will look in each location during start and create commands for all executables in those locations.  On Windows, anything with the extensions CMD, PS1, or EXE will be treated as plugins.  On MacOS, Linux, Unix, and other similar operating systems, that will be anything with the mode +x on files in those paths.  For all operating systems, Best Chat will add anything whose extension is listed in the bottom of this box.  If you aren't running Windows, but want to include EXEs, add Wine.  Also, non-Windows users that want to use PowerShell scripts may need to install PS."
+		Grid.ColumnSpan="3" />
+        <ListBox
+		Name="lbLocations"
+		Grid.Row="2" />
+        <Grid
+		Grid.Column="2"
+		Grid.Row="2"
+		VerticalAlignment="Center">
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition />
+            </Grid.ColumnDefinitions>
+            <Grid.RowDefinitions>
+                <RowDefinition
 				Height="Auto" />
-			<RowDefinition
+                <RowDefinition
 				Height="4" />
-			<RowDefinition />
-			<RowDefinition
-				Height="4" />
-			<RowDefinition
+                <RowDefinition
 				Height="Auto" />
-		</Grid.RowDefinitions>
-		<PrefCtrls:InfoOnThisPageTextBlock
-			Text="Below are a series of paths you want Best Chat to consider as containing external plug-ins.  Chat will look in each location during start and create commands for all executables in those locations.  On Windows, anything with the extensions CMD, PS1, or EXE will be treated as plugins.  On MacOS, Linux, Unix, and other similar operating systems, that will be anything with the mode +x on files in those paths.  For all operating systems, Best Chat will add anything whose extension is listed in the bottom of this box.  If you aren't running Windows, but want to include EXEs, add Wine.  Also, non-Windows users that want to use PowerShell scripts may need to install PS."
-			Grid.ColumnSpan="3" />
-		<ListBox
-			Name="lbLocations"
+                <RowDefinition
+				Height="40" />
+                <RowDefinition
+				Height="Auto" />
+                <RowDefinition
+				Height="4" />
+                <RowDefinition
+				Height="Auto" />
+                <RowDefinition
+				Height="4" />
+                <RowDefinition
+				Height="Auto" />
+                <RowDefinition
+				Height="40" />
+                <RowDefinition
+				Height="Auto" />
+            </Grid.RowDefinitions>
+            <Button
+			Name="btnMoveUp"
+			Content="Move Up ▲" />
+            <Button
+			Name="btnMoveDown"
+			Content="Move Down ▼"
 			Grid.Row="2" />
-		<Grid
-			Grid.Column="2"
-			Grid.Row="2"
-			VerticalAlignment="Center">
-			<Grid.ColumnDefinitions>
-				<ColumnDefinition />
-			</Grid.ColumnDefinitions>
-			<Grid.RowDefinitions>
-				<RowDefinition
-					Height="Auto" />
-				<RowDefinition
-					Height="4" />
-				<RowDefinition
-					Height="Auto" />
-				<RowDefinition
-					Height="40" />
-				<RowDefinition
-					Height="Auto" />
-				<RowDefinition
-					Height="4" />
-				<RowDefinition
-					Height="Auto" />
-				<RowDefinition
-					Height="4" />
-				<RowDefinition
-					Height="Auto" />
-				<RowDefinition
-					Height="40" />
-				<RowDefinition
-					Height="Auto" />
-			</Grid.RowDefinitions>
-			<Button
-				Name="btnMoveUp"
-				Content="Move Up ▲" />
-			<Button
-				Name="btnMoveDown"
-				Content="Move Down ▼"
-				Grid.Row="2" />
-			<Button
-				Name="btnAddPath"
-				Content="Add…"
-				Grid.Row="4" />
-			<Button
-				Name="btnEditPath"
-				Content="Edit…"
-				Grid.Row="6" />
-			<Button
-				Name="btnDelPath"
-				Content="Delete"
-				Grid.Row="8" />
-			<Button
-				x:Name="btnCopySysPathToList"
-				Grid.Row="10"
-				Content="Copy your system path environment variable">
-				<Button.ToolTip>
-					<TextBlock>Causes your OS's search path system environment variable, probably called
-					<BestChatCtrls:FixedWidthHilightSpan>PATH</BestChatCtrls:FixedWidthHilightSpan>, to be copied to the list to the left.  Any existing entries are preserved in the order they currently appear.  No duplicates will be included.  Clicking this will turn the “Include OS's search path system environment variable” off.</TextBlock>
-				</Button.ToolTip>
-			</Button>
-		</Grid>
-		<CheckBox
-			x:Name="checkIncludeSysPath"
-			Grid.Row="4"
-			Grid.ColumnSpan="3"
-			Content="Include OS's search path system environment variable" />
-	</Grid>
-</base:VisualPrefsTabCtrl>
+            <Button
+			Name="btnAddPath"
+			Content="Add…"
+			Grid.Row="4" />
+            <Button
+			Name="btnEditPath"
+			Content="Edit…"
+			Grid.Row="6" />
+            <Button
+			Name="btnDelPath"
+			Content="Delete"
+			Grid.Row="8" />
+            <Button
+			x:Name="btnCopySysPathToList"
+			Grid.Row="10"
+			Content="Copy your system path environment variable">
+                <Button.ToolTip>
+                    <TextBlock>Causes your OS's search path system environment variable, probably called
+				<BestChatCtrls:FixedWidthHilightSpan>PATH</BestChatCtrls:FixedWidthHilightSpan>, to be copied to the list to the left.  Any existing entries are preserved in the order they currently appear.  No duplicates will be included.  Clicking this will turn the “Include OS's search path system environment variable” off.</TextBlock>
+                </Button.ToolTip>
+            </Button>
+        </Grid>
+        <CheckBox
+		x:Name="checkIncludeSysPath"
+		Grid.Row="4"
+		Grid.ColumnSpan="3"
+		Content="Include OS's search path system environment variable" />
+    </Grid>
+</PrefsCtrls:VisualPrefsTabCtrl>
